# rtimedb

./: .gitignore  Cargo.toml  FUNDING.yml  LICENSE.md  README.md  tsf_file_specs.md
docs/: tsf_file_spec.md
docs/diagrams/: process_flow.mmd
src/: lib.rs
src/executors/: executor.rs  mod.rs  physical_plan.rs
src/tsf/: async_header.rs  async_tsf_reader.rs  header.rs  mod.rs  tsf_reader.rs  tsf_writer.rs
src/tsf/segments/: async_column_data.rs  async_data_header.rs  async_segment_data.rs  data.rs  mod.rs  segment_column_data.rs  segment_data.rs  segment_data_header.rs  types.rs
